--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <title>Jenny - Confidente IA</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it@12.3.2/dist/markdown-it.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-900 text-white flex h-[100dvh] overflow-hidden relative">
