--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex, nofollow">
     <title>Connexion - Jenny</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=2">
 </head>
 
 <body class="bg-gray-900 text-white flex justify-center items-center h-screen bg-[url('/images/unnamed.jpg')] bg-cover bg-center bg-no-repeat relative">
@@ -22,6 +22,7 @@
             <p class="text-pink-200 text-sm mt-1 italic">Ta confidente intime...</p>
         </div>
         <form id="login-form">
+            <div id="error-message" class="text-red-500 text-center mb-4"></div>
             <div class="mb-4">
                 <label for="email" class="block text-sm font-bold mb-2">Email</label>
                 <input type="email" id="email" name="email"
@@ -50,7 +51,6 @@
         <p class="text-center mt-2">
             <a href="/forgot-password" class="text-gray-400 hover:text-white text-sm">Mot de passe oublié ?</a>
         </p>
-        <div id="error-message" class="text-red-500 text-center mt-4"></div>
     </div>
     <script src="login.js"></script>
 </body>
